@@ -36,6 +36,10 @@
         <sonar.version>5.7.0.6970</sonar.version>
         <testcontainers.version>1.20.4</testcontainers.version>
         <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
+        <archunit.version>1.3.0</archunit.version>
+        <pitest.version>1.16.1</pitest.version>
+        <pitest-junit5-plugin.version>1.2.3</pitest-junit5-plugin.version>
+        <argLine></argLine>
     </properties>
 
     <dependencyManagement>
@@ -66,6 +70,24 @@
                 <artifactId>logstash-logback-encoder</artifactId>
                 <version>${logstash-logback-encoder.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.tngtech.archunit</groupId>
+                <artifactId>archunit-junit5</artifactId>
+                <version>${archunit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.atlassian.oai</groupId>
+                <artifactId>swagger-request-validator-mockmvc</artifactId>
+                <version>2.44.1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.atlassian.oai</groupId>
+                <artifactId>swagger-request-validator-core</artifactId>
+                <version>2.44.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -81,11 +103,36 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
+                        <argLine>-XX:+TieredCompilation -XX:TieredStopAtLevel=1 -XX:+UseSerialGC @{argLine}</argLine>
+                        <properties>
+                            <configurationParameters>
+                                junit.jupiter.execution.parallel.enabled = true
+                                junit.jupiter.execution.parallel.mode.default = same_thread
+                                junit.jupiter.execution.parallel.mode.classes.default = concurrent
+                            </configurationParameters>
+                        </properties>
+                        <excludes>
+                            <exclude>**/DonacionesServiceApplicationTest.java</exclude>
+                            <exclude>**/IncentivosServiceApplicationTest.java</exclude>
+                            <exclude>**/RepositoriosJpaTest.java</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
@@ -110,7 +157,7 @@
                     <executions>
                         <execution>
                             <id>generate-plantuml</id>
-                            <phase>test</phase>
+                            <phase>none</phase>
                             <goals>
                                 <goal>generate</goal>
                             </goals>
@@ -137,6 +184,9 @@
                 <configuration>
                     <release>${java.version}</release>
                     <parameters>true</parameters>
+                    <compilerArgs>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -190,37 +240,77 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <plugin>
-                <groupId>de.elnarion.maven</groupId>
-                <artifactId>plantuml-generator-maven-plugin</artifactId>
-                <version>${plantuml-generator.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-starter-data-jpa</artifactId>
-                        <version>${spring.boot.dependencies.version}</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>generate-plantuml</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <outputFilename>modelo_tecnico.puml</outputFilename>
-                            <scanPackages>
-                                <scanPackage>grupo5</scanPackage>
-                            </scanPackages>
-                            <hideFields>false</hideFields>
-                            <hideMethods>false</hideMethods>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>mutation-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-maven</artifactId>
+                        <version>${pitest.version}</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.pitest</groupId>
+                                <artifactId>pitest-junit5-plugin</artifactId>
+                                <version>${pitest-junit5-plugin.version}</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <targetClasses>
+                                <param>grupo5.donaciones.models.algoritmos.AlgoritmoCompatibilidadSemantica*</param>
+                            </targetClasses>
+                            <targetTests>
+                                <param>grupo5.donaciones.models.algoritmos.AlgoritmoCompatibilidadSemanticaTest</param>
+                            </targetTests>
+                            <mutationThreshold>75</mutationThreshold>
+                            <failWhenNoMutations>false</failWhenNoMutations>
+                            <useClasspathFile>true</useClasspathFile>
+                            <verbose>true</verbose>
+                            <jvmArgs>
+                                <jvmArg>-Xmx1024m</jvmArg>
+                            </jvmArgs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>pitest-mutation-coverage</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>mutationCoverage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>puml</id>
+            <activation>
+                <property>
+                    <name>plantuml-generator.skip</name>
+                    <value>false</value>
+                </property>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>de.elnarion.maven</groupId>
+                            <artifactId>plantuml-generator-maven-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <id>generate-plantuml</id>
+                                    <phase>test</phase>
+                                </execution>
+                            </executions>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+    </profiles>
 </project>
